bug with duplicated categories save fixed